--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-sidebar": "^3.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
